kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-app
  labels:
    app: api-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 25%

  template:
    metadata:
      labels:
        app: api-app
    spec:
      containers:
      - image: rainchik/api:latest
        imagePullPolicy: Always
        name: api-app
        ports:
        - containerPort: 5000
          protocol: TCP
