kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-app
spec:
  selector:
    app: api-app
  type: LoadBalancer
  ports:
   -  protocol: TCP
      port: 80
      targetPort: 5000
