kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api-app
spec:
  backend:
    serviceName: api-app
    servicePort: 80
